# C-projects

./: .gitmodules  CMakeLists.txt
Draft/: Draft.c  LinkedList.c  LinkedList_Leetcode.c
Leetcode/: test.txt
Leetcode/1 Two_sum/: two_sum.c
Leetcode/1108 Defanging an IP Address/: 1108 Defanging an IP Address.c
Leetcode/1689 Partitioning into minimum number of deci binary numbers/: 1689 Partitioning into minimum number of deci binary numbers.c
Leetcode/2807 Insert Greatest Common Divisors in Linked List/: 2807 Insert Greatest Common Divisors in Linked List.c
School-21/C3_SimpleBashUtils-5-master/src/: CatFunction.c
School-21/C3_SimpleBashUtils-5-master/src/cat/: text.txt
